--- a/table.html
+++ b/table.html
@@ -101,7 +101,7 @@
         <th class="romam-letter">IV</th>
         <td>Anusha</td>
         <td>Devi <br> kala</td>
-        <td>Esthar</td>
+        <td>Ramya</td>
         <td>Laskhmi</td>
         <td>Ramya</td>
        </tr>
@@ -111,9 +111,9 @@
         <th class="romam-letter">V</th>
         <td>Laskhmi</td>
         <td>Ramya</td>
-        <td>Anusha</td>
+        <td>Devika</td>
         <td>Devi <br> kala</td>
-        <td>Esthar</td>
+        <td>Rohini</td>
        </tr>
 
     </table>
